updated installation scripts